# Spectra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conan_profile  conanfile.py
include/gl_abstraction/: shaders.hpp
src/: CMakeLists.txt  main.cpp  test.cpp
src/audio/: CMakeLists.txt  track.cppm
src/audio_visualiser/: CMakeLists.txt  main.cpp
src/gl/: CMakeLists.txt  buffer_layout.cppm  error.cppm  index_buffer.cppm  mesh.cppm  opengl.cppm  renderer.cppm  shader.cppm  shapes.cppm  text.cppm  vertex_array.cppm  vertex_buffer.cppm
src/gl_abstraction/: CMakeLists.txt  shaders.cpp
src/glm/: CMakeLists.txt  glm.cppm
src/gui/: CMakeLists.txt  gui.cppm  menu.cppm  panel.cppm  tracks.cppm  waveform.cppm  window.cppm
src/math/: CMakeLists.txt  fft.cppm  helpers.cppm  math.cppm
src/music/: CMakeLists.txt  audio.cppm  music.cppm  track.cppm
src/shaders/: basic.shader  frequency_shader.glsl  panel_shader.glsl  shape_shader.glsl  text_shader.glsl
src/utility/: CMakeLists.txt  my_container.cppm  notifier.cppm  utility.cppm
tests/: CMakeLists.txt  buffer_layout_test.cpp  fft_test.cpp  notifier_test.cpp  stress_test.cpp  test_fuzz.cpp  test_math_helpers.cpp
